Improvements to command handling